--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <div class="projeto">
         <h3>Portifólio Pessoal</h3>
         <p>Este projeto tem como objetivo criar uma aplicação de portfólio pessoal. Utiliza HTML, CSS e JavaScript.</p>
-        <a href="https://github.com/seuperfil/projeto1">Repositório GitHub</a>
+        <a href="https://github.com/gabrielqrzz/portifolio.git">Repositório GitHub</a>
         <img src="images/Captura de tela 2024-10-07 225455.png" alt="a">
     </div>
 </section>
